added filters in applications API
